--- a/Libplanet.Store.Remote.Executable.csproj
+++ b/Libplanet.Store.Remote.Executable.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Libplanet.Store.Remote" Version="5.4.2" />
     <PackageReference Include="Libplanet.RocksDBStore" Version="5.4.2" />
+    <PackageReference Include="ConsoleAppFramework" Version="5.3.1" />
   </ItemGroup>
 
 </Project>
