--- a/Libplanet.Store.Remote.Executable.csproj
+++ b/Libplanet.Store.Remote.Executable.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="Libplanet.Store.Remote" Version="5.4.2" />
     <PackageReference Include="Libplanet.RocksDBStore" Version="5.4.2" />
     <PackageReference Include="ConsoleAppFramework" Version="5.3.1" />
+
+    <PackageReference Include="Serilog.Extensions.Logging" Version="2.8.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="2.8.0" />
   </ItemGroup>
 
 </Project>
