feat: improve docs

--- a/Libplanet.Store.Remote.Executable.csproj
+++ b/Libplanet.Store.Remote.Executable.csproj
@@ -17,5 +17,10 @@
 
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <None Include="README.md" />
+    <None Include="LICENSE" />
+  </ItemGroup>
 
 </Project>
