--- a/Libplanet.Store.Remote.Executable.csproj
+++ b/Libplanet.Store.Remote.Executable.csproj
@@ -16,6 +16,12 @@
     <PackageReference Include="ConsoleAppFramework" Version="5.3.1" />
 
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
+    
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.10.0" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.10.1" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.10.0" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.10.0" />
+    <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.10.0-beta.1" />
   </ItemGroup>
   
   <ItemGroup>
