feat: enable AOT feature

--- a/Libplanet.Store.Remote.Executable.csproj
+++ b/Libplanet.Store.Remote.Executable.csproj
@@ -6,7 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Authors>Planetarium</Authors>
-    
+
+    <PublishAot>true</PublishAot>
+    <EnableAotAnalyzer>true</EnableAotAnalyzer>
+
     <Version>0.1.0</Version>
   </PropertyGroup>
 
